# MCPress

./: .gitignore  requirements.md
.cursor/plans/: fastmcp_3_setup_e99b0c46.plan.md  update_mcp_server_to_match_supabase_schema_95e35870.plan.md
backend/: requirements.txt
backend/app/database/: connection.py
backend/app/models/: database.py
frontend/: .env.example
frontend/src/components/portal/: ArticlePortal.tsx
frontend/src/config/: env.ts
frontend/src/services/api/: articles.ts
mcp-server/: .env.example  README.md  pyproject.toml
mcp-server/src/mcpress/: __init__.py  __main__.py  config.py  server.py
mcp-server/src/mcpress/tools/: __init__.py  articles.py
supabase/migrations/: 001_create_schema.sql
